Mon Nov 13 10:40:18 CET 2006

	* src/org/jcae/mesh/cad/CADShape.java
	  src-occ/org/jcae/mesh/cad/occ/OCCShape.java: Remve CADShape.id member.

Thu Nov  9 17:32:00 CET 2006 Denis Barbier <barbier@users.sourceforge.net>

	* src/org/jcae/mesh/bora/algo/Netgen.java
	  src/org/jcae/mesh/bora/algo/TeTgen.java: Add wrappers for Netgen
	and TetGen 3D meshers.

Wed Nov  8 13:24:40 CET 2006 Denis Barbier <barbier@users.sourceforge.net>

	* src/org/jcae/mesh/bora: Improve support for different mesh
	constraints, and move src/org/jcae/mesh/amibe/constraints into
	src/org/jcae/mesh/bora.
	* src/org/jcae/mesh/mesher/ds/MMesh0D.java
	  src/org/jcae/mesh/mesher/ds/MMesh1D.java: Allow initialization
	from within bora meshes.
	* src/org/jcae/mesh/xmldata/Bora1DWriter.java
	  src/org/jcae/mesh/xmldata/Bora1DReader.java: New I/O helpers.

Mon Nov  6 09:36:57 CET 2006 Denis Barbier <barbier@users.sourceforge.net>

	* src/org/jcae/mesh/amibe/ds/Vertex.java: Make the mesh member
	non-static.

Fri Nov  3 18:02:19 CET 2006 Denis Barbier <barbier@users.sourceforge.net>

	* src/org/jcae/mesh/amibe/util/PAVLSortedTree.java: This class does
	not need to be synchronized.

Fri Nov  3 15:16:22 CET 2006 Denis Barbier <barbier@users.sourceforge.net>

	* src/org/jcae/mesh/amibe/ds/Vertex.java
	  src/org/jcae/mesh/amibe/metrics/Quadric3DError.java
	  src/org/jcae/mesh/amibe/algos3d/DecimateHalfEdge.java
	  src/org/jcae/mesh/amibe/algos3d/DecimateVertex.java: In Decimate*
	algorithms, reuse v3 to avoid allocating new Vertex instances.

Fri Nov  3 12:20:09 CET 2006 Denis Barbier <barbier@users.sourceforge.net>

	* src/org/jcae/mesh/amibe/ds/OTriangle.java: Let computeNormal3D()
	and computeNormal3DT() return triangle area instead of 2*area.
	This does not change current computations, but is less confusing.
	* src/org/jcae/mesh/amibe/ds/Vertex.java (clone): Revert previous
	optimization, it was plain broken.

Thu Nov  2 17:29:22 CET 2006 Denis Barbier <barbier@users.sourceforge.net>
